--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#school-life">School Life</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -411,110 +411,6 @@
             </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">청음복지관 청각장애 청소년 대상 SW 진로체험 교육 봉사</h3>
-            <div class="subheading mb-3">속기 및 교육 보조</div>
-            <p>
-              오조봇을 이용한 로봇코딩특강에서 보조교사 및 속기사로 봉사했습니다.<br>
-              컬러펜과 스티커를 이용하는 오조봇 교육과 블록클리 게임을 이용한 블록 프로그래밍을 진행했습니다.
-            </p>
-
-            <div class="gallery">
-              <a href="static/images/IMG_6315.JPG" data-lightbox="mygallery14"><img src="static/images/IMG_6315.JPG"></a>
-              <a href="static/images/IMG_2205.JPG" data-lightbox="mygallery14"><img src="static/images/IMG_2205.JPG"></a>
-            </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
-
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">2019. 08. 06</span>
-            </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">제49대 총학생회 <하이파이브></h3>
-            <div class="subheading mb-3">SNS팀장 / 홍보국장</div>
-            <p>
-              1학기에는 SNS팀장으로, 2학기에는 홍보국장으로 활동했습니다. 동국대학교 총학생회 페이스북 페이지, 에브리타임, 디연(동국대학교 커뮤니티 사이트) 계정 관리 및 총학생회 홈페이지 관리를 담당하여 각종 공지사항을 업로드하는 일을 했습니다.<br>
-              또한 각종 포스터 및 영상 등 총학생회 관련 홍보물 제작을 담당했습니다.
-            </p>
-
-            <div class="gallery">
-              <a href="static/images/IMG_7296.JPG" data-lightbox="mygallery02" data-title="봄 대동제가 끝나고 축기단과 함께"><img src="static/images/IMG_7296.JPG"></a>
-              <a href="static/images/IMG_1652.JPG" data-lightbox="mygallery02" data-title="가을 축제가 끝나고 축기단과 함께"><img src="static/images/IMG_1652.JPG"></a>
-              <a href="static/images/IMG_2003.JPG" data-lightbox="mygallery02" data-title="하이파이브 단체사진"><img src="static/images/IMG_2003.JPG"></a>
-              <a href="static/images/Untitled.png" data-lightbox="mygallery02" data-title="임기끝 파티때 받은 상장"><img src="static/images/Untitled.png"></a>
-            </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
-
-            </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2017. 04 - 2017. 12</span>
-          </div>
-        </div>
-
-        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">동국대학교 Dream Major(전공 체험) 멘토</h3>
-            <div class="subheading mb-3"></div>
-            <p>
-              경영학과 멘토로 고등학생들에게 학과와 전공에 대한 상세한 안내와 모의체험을 도와주고, 캠퍼스 투어를 진행했습니다.
-            </p>
-
-            <div class="gallery">
-              <a href="static/images/photo.JPG" data-lightbox="mygallery05"><img src="static/images/photo.JPG"></a>
-              <a href="static/images/IMG_3924.JPG" data-lightbox="mygallery05"><img src="static/images/IMG_3924.JPG"></a>
-            </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
-
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">2017. 01. 04</span>
-            </div>
-        </div>-->
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">제49대 경영대학 학생회 <동경></h3>
-            <div class="subheading mb-3">홍보부원</div>
-            <p>
-              경영대학 학생회 관련 각종 홍보물 제작을 담당했습니다.
-            </p>
-
-            <div class="gallery">
-              <a href="static/images/IMG_5297.JPG" data-lightbox="mygallery03" data-title="2017년 새내기 새로 배움터"><img src="static/images/IMG_5297.JPG"></a>
-              <a href="static/images/IMG_6195.JPG" data-lightbox="mygallery03" data-title="2017-1학기 중간고사 야식행사"><img src="static/images/IMG_6195.JPG"></a>
-            </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
-
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2017. 01 - 2017. 04</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">제48대 경영대학 학생회 <동경></h3>
-            <div class="subheading mb-3">집행부원</div>
-            <p>
-              경영대학 학생회의 각종 행사 준비와 홍보물 제작을 담당했습니다.
-            </p>
-
-            <div class="gallery">
-              <a href="static/images/IMG_3072.JPG" data-lightbox="mygallery04"><img src="static/images/IMG_3072.JPG"></a>
-              <a href="static/images/IMG_3071.JPG" data-lightbox="mygallery04"><img src="static/images/IMG_3071.JPG"></a>
-            </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
-
-            </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2016. 03 - 2016. 12</span>
-          </div>
-        </div>
-
       </div>
 
     </section>
@@ -552,75 +448,145 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="school-life">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-        <div class="subheading mb-3">Programming Languages</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            C</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            C++</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Java</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            HTML5</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            CSS3</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            JavaScript</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            R</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Python</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Ruby</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Dart</li>
-        </ul>
+        <h2 class="mb-5">School life</h2>
 
-        <br><br>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">융합소프트웨어 연계전공 수업 TA</h3>
+            <div class="mt-3">
+              <p>
+                * 자료구조와알고리즘2<br>
+                * 컴퓨터시스템
+              </p>
+            </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2021. 03 - 현재</span>
+          </div>
+        </div>
 
-        <div class="subheading mb-3">Frameworks</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Django</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Rails</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Flutter</li>
-        </ul>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">동국대학교 HI-SW 봉사단</h3>
+            <div class="subheading">청음복지관 SW체험교육 봉사(2020.11.28)</div>
+            <div class="subheading mb-3">청음복지관 청각장애 청소년 대상 SW 진로체험 교육 봉사(2019.08.06)</div>
+            <p>
+              HI-SW 봉사단은 SW교육 소외자 예방과 SW저번인구 확대를 목적으로, SW 교육봉사를 수행하기 위해 창단된 동국대학교 융합교육원 산하 SW 교육봉사 단체입니다.<br>
+              봉사단 단원으로서 2019년부터 SW를 활용한 재능 기부 활동에 참여해오고 있습니다.
+            </p>
 
-        <br><br>
+            <div class="gallery">
+              <a href="static/images/school-life/2019-hisw.JPG" data-lightbox="mygallery14"><img src="static/images/school-life/2019-hisw.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
-        <div class="subheading mb-3">Design Tools</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Adobe Photoshop</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Adobe Illustrator</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Adobe Premiere Pro</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Adobe After Effects</li>
-        </ul>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2019. 03 - 현재</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">2019 동국대학교 가을 축제기획단</h3>
+            <div class="subheading mb-3">홍보팀장</div>
+            <p>
+              축제 기간동안 진행될 각종 컨텐츠 기획에 참여했고, 축제 전반 홍보물 제작 및 SNS 관리를 담당했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/school-life/2019-fall-festival.JPG" data-lightbox="mygallery02" data-title="가을 축제가 끝나고 축기단과 함께"><img src="static/images/school-life/2019-fall-festival.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2017. 08 - 2017. 09</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">2019 동국대학교 봄 대동제 축제기획단</h3>
+            <div class="subheading mb-3">홍보팀원</div>
+            <p>
+              축제 기간동안 진행될 각종 컨텐츠 기획에 참여했고, 축제 전반 홍보물 제작 및 SNS 관리를 담당했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/school-life/2019-spring-festival.JPG" data-lightbox="mygallery02" data-title="봄 대동제가 끝나고 축기단과 함께"><img src="static/images/school-life/2019-spring-festival.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2017. 08 - 2017. 09</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">동국대학교 총학생회 <하이파이브></h3>
+            <div class="subheading mb-3">SNS팀장 / 홍보국장</div>
+            <p>
+              1학기에는 SNS팀장으로, 2학기에는 홍보국장으로 활동했습니다. 동국대학교 총학생회 페이스북 페이지, 에브리타임, 디연(동국대학교 커뮤니티 사이트) 계정 관리 및 총학생회 홈페이지 관리를 담당하여 각종 공지사항을 업로드하는 일을 했습니다.<br>
+              또한 각종 포스터 및 영상 등 총학생회 관련 홍보물 제작을 담당했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/school-life/hifive-1.JPG" data-lightbox="mygallery02" data-title="하이파이브 단체사진"><img src="static/images/school-life/hifive-1.JPG"></a>
+              <a href="static/images/school-life/hifive-2.png" data-lightbox="mygallery02" data-title="임기가 끝나는 것을 기념하는 파티에서 받은 상장"><img src="static/images/school-life/hifive-2.png"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2017. 04 - 2017. 12</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">2017년 동국대학교 Dream Major(전공 체험) 멘토</h3>
+            <div class="subheading mb-3"></div>
+            <p>
+              경영학과 멘토로 고등학생들에게 학과와 전공에 대한 상세한 안내와 모의체험을 도와주고, 캠퍼스 투어를 진행했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/school-life/dream-major-1.JPG" data-lightbox="mygallery05"><img src="static/images/school-life/dream-major-1.JPG"></a>
+              <a href="static/images/school-life/dream-major-2.JPG" data-lightbox="mygallery05"><img src="static/images/school-life/dream-major-2.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2017. 01. 04</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">경영대학 학생회 <동경></h3>
+            <div class="subheading mb-3">집행부원, 홍보부원</div>
+            <p>
+              경영대학 학생회의 각종 행사 준비와 홍보물 제작을 담당했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/school-life/48dongkyung.JPG" data-lightbox="mygallery04"><img src="static/images/school-life/48dongkyung.JPG"></a>
+              <a href="static/images/school-life/49dongkyung.JPG" data-lightbox="mygallery03"><img src="static/images/school-life/49dongkyung.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2016. 03 - 2017. 04</span>
+          </div>
+        </div>
+
       </div>
     </section>
 
