--- a/index.html
+++ b/index.html
@@ -636,60 +636,25 @@
       <div class="w-100">
         <h2 class="mb-5">Certifications</h2>
         <ul class="fa-ul mb-0">
-          <li>
+          <li class="mb-2">
             <i class="fa-li fa fa-check text-success"></i>
             TOEIC Speaking Level 7</li>
-          <li>
+          <li class="mb-2">
             <i class="fa-li fa fa-check text-success"></i>
             OPIc AL</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - 2020년 2학기 동국대학교 소프트웨어공학개론 수업 프로젝트 최우수상</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            4<sup>th</sup>
-            Place - 2020 롯데그룹X멋쟁이사자처럼 온라인 해커톤 동상</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - 2020 오픈소스 컨트리뷰톤 과학기술정보통신부장관상</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            4<sup>th</sup>
-            Place - 2019 공개SW 컨트리뷰톤 정보통신산업진흥원장상</li>
-          <li>
+          <li class="mb-2">
             <i class="fa-li fa fa-check text-success"></i>
             정보처리기사</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - 2019 멋쟁이사자처럼 해커톤 FLETA 대표상</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - 2019 동국대학교 프로그래밍 경진대회 동상</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - 2019 멋쟁이사자처럼 소속 5개 대학 연합 해커톤 '새뜻톤' 우승</li>
-          <li>
+          <li class="mb-2">
             <i class="fa-li fa fa-check text-success"></i>
             TOEIC 970</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2018 동국대학교 프로그래밍 경진대회 입상</li>
-          <li>
+          <li class="mb-2">
             <i class="fa-li fa fa-check text-success"></i>
             컴퓨터활용능력 2급</li>
-          <li>
+          <li class="mb-2">
             <i class="fa-li fa fa-check text-success"></i>
             GTQ 그래픽기술자격 1급</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - 2017 동국대학교 제4회 EAS 영어글쓰기대회(Writing Contest) 대상</li>
-          <li>
+          <li class="mb-2">
             <i class="fa-li fa fa-check text-success"></i>
             ITQ OA Master</li>
         </ul>
