--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
             </p>
 
             <div class="gallery">
-              <a href="static/images/contributhon.JPG" data-lightbox="e-08"><img src="static/images/contributhon.JPG"></a>
-              <a href="static/images/mvp.JPG" data-lightbox="e-08"><img src="static/images/mvp.JPG"></a>
+              <a href="static/images/projects/2019-contributhon-1.JPG" data-lightbox="e-08"><img src="static/images/projects/2019-contributhon-1.JPG"></a>
+              <a href="static/images/projects/2019-contributhon-2.JPG" data-lightbox="e-08"><img src="static/images/projects/2019-contributhon-2.JPG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
@@ -669,10 +669,63 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Movie-it</h3>
+            <div class="subheading mb-3">
+              Kotlin, Python, Django REST Framework<br>
+              팀장, 백엔드 개발<br>
+              <small><a href="https://github.com/movie-it" target="_blank">Github</a></small>
+            </div>
+            <p>
+              코로나로 인해 대부분의 일상이 비대면으로 전환되면서 자연스럽게 사람들과의 소통도 줄어들었습니다.
+              반대로 온라인 활동이 늘고 컨텐츠 소비가 늘어남과 더불어 소통의 단절로 외로움을 느끼는 사람들이 증가하고 있습니다.
+              무빗(Movie-it)은 지인들과의 소통할 거리를 늘려보자는 목표로 개발한 안드로이드 어플리케이션입니다.<br>
+              자신이 본 영화 평점을 매겨 기록하고, 친구들이 이 영화를 봤을 때 몇 점을 줄 지 평점을 예측해 볼 수 있습니다.
+              평점 예측 성공 여부에 따라 누적되는 친밀도가 달라집니다. 다양한 통계와 뱃지, 랭킹 시스템 등의 엔터테이닝 요소도 포함되어 있습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/projects/movie-it-1.png" data-lightbox="p-12"><img src="static/images/projects/movie-it-1.png"></a>
+              <a href="static/images/projects/movie-it-2.png" data-lightbox="p-12"><img src="static/images/projects/movie-it-2.png"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2021. 02. 04 - 06<br>SW중심대학 공동해커톤</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">가져가(GAJUGA)</h3>
+            <div class="subheading mb-3">
+              Dart, Flutter<br>
+              관리자 앱-메뉴 관리(수정, 검색), 직원 관리(수정, 검색, 활동내역 조회), 각종 UI 구현<br>
+              <small><a href="https://github.com/seunghwanly/commitSyndrome" target="_blank">Github</a></small>
+            </div>
+            <p>
+              '레스토랑 자동화 시스템' 주제의 프로젝트로, 테이크아웃 전문 레스토랑의 사용자 앱과 관리자 앱을 개발했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/projects/gajuga-manage-1.png" data-lightbox="p-11"><img src="static/images/projects/gajuga-manage-1.png"></a>
+              <a href="static/images/projects/gajuga-manage-2.png" data-lightbox="p-11"><img src="static/images/projects/gajuga-manage-2.png"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2020-2학기 소프트웨어공학개론 수업<br>4인 팀프로젝트</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">LOHB'S Pick</h3>
             <div class="subheading mb-3">
-              HTML/CSS/Javascript, Python Django<br>
-              팀장, 백엔드 개발<br><small><a href="http://lohbs-pick.site" target="_blank">사이트 보러가기</a></small>
+              HTML/CSS/Javascript, Python, Django<br>
+              팀장, 백엔드 개발<br>
+              <small><a href="https://github.com/JuYeong0413/lohbs-pick" target="_blank">Github</a></small>
             </div>
             <p>
               롭스에 입점되어 있는 상품 조합을 사용자가 원하는대로 구성해 희망하는 주기마다 정기배송을 받는 서비스입니다.<br>
@@ -680,9 +733,8 @@
             </p>
 
             <div class="gallery">
-              <a href="static/images/IMG_1398.PNG" data-lightbox="mygallery21"><img src="static/images/IMG_1398.PNG"></a>
-              <a href="static/images/IMG_1370.jpg" data-lightbox="mygallery21"><img src="static/images/IMG_1370.jpg"></a>
-              <a href="static/images/IMG_1368.jpg" data-lightbox="mygallery21"><img src="static/images/IMG_1368.jpg"></a>
+              <a href="static/images/projects/lohbs-pick-1.PNG" data-lightbox="p-10"><img src="static/images/projects/lohbs-pick-1.PNG"></a>
+              <a href="static/images/projects/lohbs-pick-2.JPEG" data-lightbox="p-10"><img src="static/images/projects/lohbs-pick-2.JPEG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
@@ -694,23 +746,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">멋쟁이사자처럼과 HI-SW봉사단이 함께하는 웹 기반 전자 액자 경진 대회 사이트</h3>
+            <div class="subheading mb-3">
+              HTML/CSS/Javascript, Python, Django<br>
+              멘토<br
+              ><small><a href="https://github.com/JuYeong0413/2020-dgu-fest" target="_blank">Github</a></small>
+            </div>
+            <p>
+              코로나19로 인해 진행되지 못한 대동제. 재학생들에게는 지난 축제의 추억을 되살려보고, 신입생들에게는 축제 분위기를 간접적으로 경험할 수 있는 기회를 제공하고자
+              동국대학교 멋쟁이사자처럼 8기가 모여 제작한 사이트입니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/projects/2020-dgufest.PNG" data-lightbox="p-09"><img src="static/images/projects/2020-dgufest.PNG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2020. 09. 07 - 11. 02<br>멋쟁이사자처럼 8기</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">해줘(Haejwo)</h3>
             <div class="subheading mb-3">
               HTML/CSS/Javascript, Ruby on Rails<br>
-              <small><a href="https://play.google.com/store/apps/details?id=kr.rails" target="_blank">앱 다운로드하기(안드로이드만 지원)</a></small><br>
-              <small><a href="https://github.com/CSID-DGU/2019-2-OSSP1-Haejwo-1" target="_blank">GitHub</a></small>
+              심부름 생성, 수정, 상세보기, 검색, 수락, 사용자 신고, 채팅 구현, UI 개선<br>
+              <small><a href="https://play.google.com/store/apps/details?id=kr.rails" target="_blank">앱 다운로드(Android)</a></small><br>
+              <small><a href="https://github.com/JuYeong0413/2019-2-OSSP1-Haejwo-1" target="_blank">GitHub</a></small>
             </div>
             <p>
               시간이 부족하거나 공강시간에 할 일이 없는 동국대학교 학생들을 위한 앱으로, 인쇄, 복사부터 커피 배달 등 다양한 심부름을 요청할 수 있습니다.
-              심부름을 요청한 학생은 심부름을 수행한 학생에게 합리적인 보상을 제공하며 가입 시 철저한 재학생 인증과 사용자 신고 기능이 포함되어 있습니다.<br>
-              심부름 생성, 수정, 상세보기, 검색, 수락, 사용자 신고, 채팅 구현과 UI 개선에 참여했습니다.
+              심부름을 요청한 학생은 심부름을 수행한 학생에게 합리적인 보상을 제공하며 가입 시 철저한 재학생 인증과 사용자 신고 기능이 포함되어 있습니다.
             </p>
 
-            <!--<div class="gallery">
-              <a href="static/images/haejwo-home.png" data-lightbox="mygallery20"><img src="static/images/haejwo-home.png"></a>
-              <a href="static/images/haejwo-chat.png" data-lightbox="mygallery20"><img src="static/images/haejwo-chat.png"></a>
-              <a href="static/images/haejwo-map.png" data-lightbox="mygallery20"><img src="static/images/haejwo-map.png"></a>
-              <a href="static/images/haejwo-blacklist.png" data-lightbox="mygallery20"><img src="static/images/haejwo-blacklist.png"></a>
+            <div class="gallery">
+              <a href="static/images/projects/haejwo-1.png" data-lightbox="p-08"><img src="static/images/projects/haejwo-1.png"></a>
+              <a href="static/images/projects/haejwo-2.png" data-lightbox="p-08"><img src="static/images/projects/haejwo-2.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>-->
 
@@ -724,8 +798,9 @@
           <div class="resume-content">
             <h3 class="mb-0">RE:CORD</h3>
             <div class="subheading mb-3">
-              HTML/CSS/Javascript, Python Django<br>
-              팀장, 백엔드 개발<br><small><a href="http://recordmusic.site" target="_blank">사이트 보러가기</a></small>
+              HTML/CSS/Javascript, Python, Django<br>
+              팀장, 백엔드 개발<br>
+              <small><a href="https://github.com/JuYeong0413/record" target="_blank">Github</a></small>
             </div>
             <p>
               기존 음원사이트의 인기 가수 차트 줄세우기와 음원 사재기에서 벗어나 나만 알고 있는 명곡을 기록하는 서비스입니다.<br>
@@ -733,9 +808,8 @@
             </p>
 
             <div class="gallery">
-              <a href="static/images/IMG_6516.JPG" data-lightbox="mygallery15"><img src="static/images/IMG_6516.JPG"></a>
-              <!-- <a href="static/images/IMG_6458.JPG" data-lightbox="mygallery15"><img src="static/images/IMG_6458.JPG"></a> -->
-              <a href="static/images/record.png" data-lightbox="mygallery15"><img src="static/images/record.png"></a>
+              <a href="static/images/projects/record-1.png" data-lightbox="p-07"><img src="static/images/projects/record-1.png"></a>
+              <a href="static/images/projects/record-2.JPG" data-lightbox="p-07"><img src="static/images/projects/record-2.JPG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
@@ -751,21 +825,22 @@
           <div class="resume-content">
             <h3 class="mb-0">고독한 독강러</h3>
             <div class="subheading mb-3">
-              HTML/CSS, Python Django<br>
-              백엔드 개발
+              HTML/CSS, Python, Django<br>
+              백엔드 개발<br>
+              <small><a href="https://github.com/JuYeong0413/solitude" target="_blank">Github</a></small>
             </div>
             <p>
               대학교에서 혼자 수업을 수강하는 학생들이 수업 및 과제 정보 공유, 스터디 개설 등을 자유롭게 할 수 있는 커뮤니티 사이트입니다.
             </p>
 
             <div class="gallery">
-              <a href="static/images/solitude.png" data-lightbox="mygallery13"><img src="static/images/solitude.png"></a>
+              <a href="static/images/projects/solitude.png" data-lightbox="p-06"><img src="static/images/projects/solitude.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2019. 06. 29 - 30</span>
+              <span class="text-primary">2019. 06. 29 - 30<br>멋쟁이사자처럼 연합 해커톤 '신촌 올빼미톤'</span>
             </div>
         </div>
 
@@ -773,21 +848,22 @@
           <div class="resume-content">
             <h3 class="mb-0">2019 동국대학교 봄 대동제 사이트</h3>
             <div class="subheading mb-3">
-              HTML/CSS/Javascript, Python Django<br>
+              HTML/CSS/Javascript, Python, Django<br>
               부스 정보 페이지 프론트엔드, 백엔드 개발
             </div>
             <p>
-              동국대학교 학생들과 축제 기간 중 학교에 방문하는 외부인들이 대동제를 풍성하게 즐길 수 있도록 연예인 라인업, 부스 정보, 교내 건물별 화장실 정보와 학교 근처 술집 정보를 제공하는 사이트입니다.
+              동국대학교 학생들과 축제 기간 중 학교에 방문하는 외부인들이 대동제를 풍성하게 즐길 수 있도록 연예인 라인업, 부스 정보, 교내 건물별 화장실 정보와
+              학교 근처 술집 정보를 제공하는 사이트입니다.
             </p>
 
             <div class="gallery">
-              <a href="static/images/IMG_5379 2.jpg" data-lightbox="mygallery12" data-title="봄 대동제가 끝나고 축기단과 함께"><img src="static/images/IMG_5379 2.jpg"></a>
+              <a href="static/images/projects/2019-dgufest.jpg" data-lightbox="p-05"><img src="static/images/projects/2019-dgufest.jpg"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2019. 05</span>
+              <span class="text-primary">2019. 05. 11 - 12<br>멋쟁이사자처럼 7기</span>
             </div>
         </div>
 
@@ -795,23 +871,23 @@
           <div class="resume-content">
             <h3 class="mb-0">LIKELION ZONE</h3>
             <div class="subheading mb-3">
-              HTML/CSS, Python Django<br>
-              백엔드 개발
+              HTML/CSS, Python, Django<br>
+              백엔드 개발<br>
+              <small><a href="https://github.com/JuYeong0413/likelion-zone" target="_blank">Github</a></small>
             </div>
             <p>
-              국민대, 동국대, 삼육대, 서울시립대, 성신여대 멋쟁이사자처럼의 연합 해커톤에서 '더 나은 멋쟁이사자처럼을 위한 서비스' 주제에 참여했습니다.<br>
-              멋쟁이사자처럼 소속 학생들이 자유롭게 모임을 개설하고 참여할 수 있는 서비스입니다.<br>
-              <a href="https://blog.naver.com/2jy22/221534215205">자세히 보러가기</a>
+              '더 나은 멋쟁이사자처럼을 위한 서비스'라는 주제로, 멋쟁이사자처럼 소속 학생들이 자유롭게 모임을 개설하고 참여할 수 있는 서비스입니다.<br>
+              <a href="https://blog.naver.com/2jy22/221534215205" target="_blank">자세히 보러가기</a><br>
             </p>
 
             <div class="gallery">
-              <a href="static/images/likelion-zone.png" data-lightbox="mygallery11"><img src="static/images/likelion-zone.png"></a>
+              <a href="static/images/projects/likelion-zone.png" data-lightbox="p-04"><img src="static/images/projects/likelion-zone.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2019. 05. 05 - 06<br>멋쟁이사자처럼 연합 해커톤 "새뜻톤"</span>
+            <span class="text-primary">2019. 05. 05 - 06<br>멋쟁이사자처럼 연합 해커톤 '새뜻톤'</span>
           </div>
         </div>
 
@@ -820,17 +896,18 @@
             <h3 class="mb-0">CafeGO</h3>
             <div class="subheading mb-3">
               HTML/CSS/Javascript, MySQL, Java<br>
-              프론트엔드, 백엔드 개발
+              프론트엔드, 백엔드 개발<br>
+              <small><a href="https://github.com/JuYeong0413/Web-Programming/tree/master/Project" target="_blank">Github</a></small>
             </div>
             <p>
               카페문화가 발전함에 따라 카페의 정보와 방문 후기가 넘쳐나고 있지만 이를 알아보기 위해서는 직접 검색해보는 방법밖에 존재하지 않고,
               동일한 카페에 대한 다양한 포스팅이 보여지는 경우가 많기 때문에 사용자들은 상위에 노출되는 소수의 카페에 대한 정보만을 확인할 수 있다는 단점을 보완하기 위해 기획되었습니다.<br>
               여러 카페들의 정보를 간편하게 확인할 수 있고 방문자들의 후기를 공유할 수 있는 플랫폼입니다.<br>
-              <a href="https://blog.naver.com/2jy22/221428231574" target="_blank">자세히 보러가기</a>
+              <a href="https://blog.naver.com/2jy22/221428231574" target="_blank">자세히 보러가기</a><br>
             </p>
 
             <div class="gallery">
-              <a href="static/images/cafego.png" data-lightbox="mygallery10"><img src="static/images/cafego.png"></a>
+              <a href="static/images/projects/cafego.png" data-lightbox="p-03"><img src="static/images/projects/cafego.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
@@ -854,8 +931,8 @@
             </p>
 
             <div class="gallery">
-              <a href="static/images/giveyou.png" data-lightbox="mygallery09"><img src="static/images/giveyou.png"></a>
-              <a href="static/images/IMG_1177.JPG" data-lightbox="mygallery09"><img src="static/images/IMG_1177.JPG"></a>
+              <a href="static/images/projects/giveyou-1.png" data-lightbox="p-02"><img src="static/images/projects/giveyou-1.png"></a>
+              <a href="static/images/projects/giveyou-2.JPG" data-lightbox="p-02"><img src="static/images/projects/giveyou-2.JPG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
@@ -867,28 +944,29 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">2018 여름 청년취업아카데미</h3>
-            <div class="subheading mb-3">SW 개발을 위한 Java기반 알고리즘 과정</div>
+            <h3 class="mb-0">학원 관리 시스템</h3>
+            <div class="subheading mb-3">
+              Java<br>
+              <small><a href="https://github.com/JuYeong0413/2018-Summer-Multicampus/tree/master/Project" target="_blank">Github</a></small>
+            </div>
+
             <p>
-              주5회, 8시간씩 총 200시간의 교육을 받았습니다.<br>
-              Java 언어, 자료구조와 Oracle sql을 배웠고 과정을 마무리하며 개인 프로젝트로 "학원 관리 시스템"을 구현했습니다.<br>
-              <a href="https://blog.naver.com/2jy22/221352923361" target="_blank">자세히 보러가기</a>
+              2018년 여름 청년취업아카데미 SW 개발을 위한 Java기반 알고리즘 과정에서 진행한개인 프로젝트입니다.<br>
             </p>
 
             <div class="gallery">
-              <a href="static/images/IMG_0070.JPG" data-lightbox="mygallery08"><img src="static/images/IMG_0070.JPG"></a>
-              <a href="static/images/multicampus/1.png" data-lightbox="mygallery08"><img src="static/images/multicampus/1.png"></a>
-              <a href="static/images/multicampus/2.png" data-lightbox="mygallery08"><img src="static/images/multicampus/2.png"></a>
-              <a href="static/images/multicampus/4.png" data-lightbox="mygallery08"><img src="static/images/multicampus/4.png"></a>
-              <a href="static/images/multicampus/5.png" data-lightbox="mygallery08"><img src="static/images/multicampus/5.png"></a>
-              <a href="static/images/multicampus/6.png" data-lightbox="mygallery08"><img src="static/images/multicampus/6.png"></a>
-              <a href="static/images/multicampus/7.png" data-lightbox="mygallery08"><img src="static/images/multicampus/7.png"></a>
+              <a href="static/images/projects/multicampus/1.png" data-lightbox="p-01"><img src="static/images/projects/multicampus/1.png"></a>
+              <a href="static/images/projects/multicampus/2.png" data-lightbox="p-01"><img src="static/images/projects/multicampus/2.png"></a>
+              <a href="static/images/projects/multicampus/4.png" data-lightbox="p-01"><img src="static/images/projects/multicampus/4.png"></a>
+              <a href="static/images/projects/multicampus/5.png" data-lightbox="p-01"><img src="static/images/projects/multicampus/5.png"></a>
+              <a href="static/images/projects/multicampus/6.png" data-lightbox="p-01"><img src="static/images/projects/multicampus/6.png"></a>
+              <a href="static/images/projects/multicampus/7.png" data-lightbox="p-01"><img src="static/images/projects/multicampus/7.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2018. 07. 27 - 08. 31</span>
+              <span class="text-primary">2018. 08. 22 - 08. 31<br>2018 여름 청년취업아카데미</span>
             </div>
         </div>
 
