--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <i class="fa fa-birthday-cake" style="font-size:20px"></i>
             1997. 04. 13 (25 years old)<br>
             <i class="fa fa-envelope" style="font-size:20px"></i>
-            <a href="mailto:juyeonglee0413@google.com">juyeonglee0413@google.com</a>
+            <a href="mailto:juyeonglee0413@gmail.com">juyeonglee0413@gmail.com</a>
           </div>
           <p class="lead mb-5">
             안녕하세요, 저는 이주영이라고 합니다!<br>
@@ -458,13 +458,14 @@
               </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2021. 03 - 현재</span>
+              <span class="text-primary">2021. 03 - 2021. 06</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
               <h3 class="mb-0">동국대학교 HI-SW 봉사단</h3>
+              <div class="subheading">당진중학교 온라인 SW교육 봉사(2021.05.14)</div>
               <div class="subheading">청음복지관 SW체험교육 봉사(2020.11.28)</div>
               <div class="subheading mb-3">청음복지관 청각장애 청소년 대상 SW 진로체험 교육 봉사(2019.08.06)</div>
               <p>
@@ -639,6 +640,9 @@
             <li class="mb-2">
               <i class="fa-li fa fa-check text-success"></i>
               정보처리기사</li>
+            <li class="mb-2">
+              <i class="fa-li fa fa-check text-success"></i>
+              SQL 개발자(SQLD)</li>
             <li class="mb-2">
               <i class="fa-li fa fa-check text-success"></i>
               TOEIC 970</li>
