--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
               <h3 class="mb-0">동국대학교 HI-SW 봉사단</h3>
+              <div class="subheading">덕수중학교 SW 체험 프로그램(2021.07.05)</div>
               <div class="subheading">당진중학교 온라인 SW교육 봉사(2021.05.14)</div>
               <div class="subheading">청음복지관 SW체험교육 봉사(2020.11.28)</div>
               <div class="subheading mb-3">청음복지관 청각장애 청소년 대상 SW 진로체험 교육 봉사(2019.08.06)</div>
