--- a/index.html
+++ b/index.html
@@ -122,6 +122,29 @@
 
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
+              <h3 class="mb-0">삼성SDS 2021 코딩캠퍼스 초등 대학생 봉사단</h3>
+              <div class="subheading mb-3">엔트리 교육 봉사</div>
+              <p>
+                삼성SDS와 사회복지공동모금회가 후원하고 JA Korea가 운영하는 코딩캠퍼스는 청소년들에게 올바른 사회인식의 틀을 만들어 주며, 
+                4차 산업 혁명 시대의 핵심적인 사고 과정이라 할 수 있는 논리, 알고리즘, 분해, 패턴, 추상화, 평가 등 다양한 컴퓨팅 사고력(Computational Thinking, CT)을 
+                함양하여 미래의 자신의 삶을 스스로 개척할 수 있는 역량을 길러주기 위한 프로그램입니다.<br>
+                초등학생들에게 실시간 온라인으로 엔트리 AI 블록을 활용하여 게임을 만드는 교육을 진행했습니다.<br>
+              </p>
+
+              <div class="gallery">
+                <a href="static/images/experience/coding-campus.JPG" data-lightbox="e-15"><img src="static/images/experience/coding-campus.JPG"></a>
+              </div>
+              <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2021. 03 - 2021. 05</span>
+            </div>
+          </div>
+
+
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
               <h3 class="mb-0">SW중심대학 공동해커톤 참여</h3>
               <div class="subheading mb-3">팀장, SW개발자</div>
               <p>
